--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -28,6 +28,9 @@
 
              ul {
                 list-style-type: none;
+                svg {
+                    height: 1.2rem;
+                }
              }
 
             h2 {
