--- a/sass/components/_package.scss
+++ b/sass/components/_package.scss
@@ -29,6 +29,10 @@
         &__disabled {
             color: $color-grey-light;
         }
+
+        svg {
+            height: 1.2rem;
+        }
         
     }
 
