--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -65,10 +65,9 @@
             font-size: 1.6rem;
             line-height: 2.6rem;
 
-            // svg {
-            //     display: inline-block;
-            //     vertical-align: middle;
-            // }
+            svg {
+                height: 1.8rem;
+            }
         }
     }
 
